@@ -9,7 +9,6 @@
     - small images have the spinner behind them
     - random avatar changes
     - sideways pictures
-    - try to fix the overlay action bar sometimes not working (find a way to check it, then recreate if it happens)
 
 
 -- For Release --
@@ -28,7 +27,6 @@
         -- window animations
 
     - Minor
-        -- dimen for pic sizes for tablets on tweet viewer
         -- full finnish update
         -- higher quality profile pictures on profile maybe?
         -- Version 2 text on startup
@@ -38,8 +36,8 @@
         -- uri stuff on user backgrounds and profile pictures
 
 
-
 - Need testing
     - retweets stacking up in the drawer
     - rtl support
     - tweetmarker shouldn't jump anymore
+    - Overlay action bar stuff
